[OpenApi] DoctrineIntheritence Clean base object when filtered
